# cmd/server/main.go
@@ -14,8 +14,6 @@ import (
 	"github.com/KOFI-GYIMAH/github-monitor/internal/github"
 	"github.com/KOFI-GYIMAH/github-monitor/internal/handler"
 	md "github.com/KOFI-GYIMAH/github-monitor/internal/middleware"
-
-	// "github.com/KOFI-GYIMAH/github-monitor/internal/queue"
 	"github.com/KOFI-GYIMAH/github-monitor/internal/service"
 	"github.com/KOFI-GYIMAH/github-monitor/internal/worker"
 	"github.com/KOFI-GYIMAH/github-monitor/pkg/logger"
@@ -25,9 +23,9 @@ import (
 
 // @title GitHub Monitory Service
 // @version 1.0.0
-// @description This is a sample server.
+// @description A Go service that monitors GitHub repositories, tracks commits, and stores data in a persistent database.
 // @host localhost:8081
-// @BasePath /v1
+// @BasePath /api/v1
 func main() {
 	if os.Getenv("DEBUG") == "true" {
 		logger.SetLevel(logger.LevelDebug)
@@ -36,7 +34,7 @@ func main() {
 	// * Load configuration
 	cfg, err := config.LoadConfiguration()
 	if err != nil {
-		logger.Error("‼️ Failed to load config: %v", err)
+		logger.Error("Failed to load config: %v", err)
 	}
 
 	// * Initialize PostgreSQL database
@@ -50,18 +48,11 @@ func main() {
 	if err := database.Migrate(); err != nil {
 		logger.Error("Failed to run migrations: %v", err)
 	} else {
-		logger.Info("Successfully ran migrations")
+		logger.Info("Successfully ran migrations 🎉")
 	}
 
 	// * Initialize GitHub client
 	githubClient := github.NewClient(cfg.GitHubToken)
-
-	// rabbitMQ, err := queue.NewRabbitMQ(cfg.RabbitMQURL)
-	// if err != nil {
-	// 	logger.Error("Failed to initialize RabbitMQ: %v", err)
-	// 	os.Exit(1)
-	// }
-	// defer rabbitMQ.Close()
 
 	// * Create services
 	repoService := service.NewRepositoryService(githubClient, database)
@@ -72,28 +63,57 @@ func main() {
 		logger.Error("Invalid sync interval: %v", err)
 	}
 
-	// * Parse repository owner/name
-	owner, name, err := config.ParseRepository(cfg.Repository)
-	if err != nil {
-		logger.Error("Invalid repository format: %v", err)
-	}
-
-	// * Create and start worker
-	worker := worker.NewSyncWorker(repoService, syncInterval, owner, name)
-
 	ctx, cancel := context.WithCancel(context.Background())
 	defer cancel()
 
-	go worker.Run(ctx)
+	// * List repositories from DB
+	repositories, err := repoService.ListAllRepositories(ctx)
+	if err != nil {
+		logger.Error("Failed to load repositories from DB: %v", err)
+	}
+
+	if len(repositories) == 0 {
+		logger.Warn("No repositories found in the database. Falling back to default repository...")
+
+		owner, name, err := config.ParseRepository(cfg.DefaultRepository)
+		if err != nil {
+			logger.Error("Invalid default repository format: %v", err)
+			os.Exit(1)
+		}
+
+		// * Sync the default repo
+		logger.Info("Syncing default repository: %s/%s", owner, name)
+		if err := repoService.SyncRepository(ctx, owner, name, time.Time{}); err != nil {
+			logger.Error("Failed to sync default repository: %v", err)
+			os.Exit(1)
+		}
+
+		// * Reload repositories after syncing
+		repositories, err = repoService.ListAllRepositories(ctx)
+		if err != nil {
+			logger.Error("Failed to reload repositories from DB: %v", err)
+			os.Exit(1)
+		}
+	}
+
+	for _, repo := range repositories {
+		owner, name, err := config.ParseRepository(repo.Name)
+		if err != nil {
+			logger.Error("Invalid repository format: %v", err)
+			os.Exit(1)
+		}
+		w := worker.NewSyncWorker(repoService, syncInterval, owner, name)
+		go w.Run(ctx)
+	}
 
 	// * Create API server
-	apiHandler := handler.NewRepositoryHandler(repoService)
+	apiHandler := handler.NewRepositoryHandler(ctx, repoService)
 	router := mux.NewRouter()
 	router.Use(md.LoggingMiddleware)
-	api := router.PathPrefix("/v1").Subrouter()
+	api := router.PathPrefix("/api/v1").Subrouter()
 
 	apiHandler.RegisterRoutes(api)
-	router.PathPrefix("/v1/swagger/").Handler(httpSwagger.WrapHandler)
+	router.PathPrefix("/api/v1/swagger/").Handler(httpSwagger.WrapHandler)
 
 	port := os.Getenv("SERVER_PORT")
 	if port == "" {
