# docs/swagger.json
@@ -1,14 +1,69 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server.",
+        "description": "A Go service that monitors GitHub repositories, tracks commits, and stores data in a persistent database.",
         "title": "GitHub Monitory Service",
         "contact": {},
         "version": "1.0.0"
     },
     "host": "localhost:8081",
-    "basePath": "/v1",
+    "basePath": "/api/v1",
     "paths": {
+        "/repositories": {
+            "post": {
+                "description": "Adds a new GitHub repository to be monitored",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "repositories"
+                ],
+                "summary": "Add a repository to monitor",
+                "parameters": [
+                    {
+                        "description": "Repository to Add",
+                        "name": "repository",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.AddRepositoryRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "409": {
+                        "description": "Repository already monitored",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to sync repository",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/repositories/{owner}/{name}/commits": {
             "get": {
                 "description": "List commits for a repository (supports filtering \u0026 pagination)",
@@ -67,7 +122,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/github_com_KOFI-GYIMAH_github-monitor_internal_models.Commit"
+                                "$ref": "#/definitions/models.Commit"
                             }
                         }
                     },
@@ -114,7 +169,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_KOFI-GYIMAH_github-monitor_internal_models.DateRequest"
+                            "$ref": "#/definitions/models.DateRequest"
                         }
                     }
                 ],
@@ -177,7 +232,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_KOFI-GYIMAH_github-monitor_internal_models.DateRequest"
+                            "$ref": "#/definitions/models.DateRequest"
                         }
                     }
                 ],
@@ -245,7 +300,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/github_com_KOFI-GYIMAH_github-monitor_internal_models.AuthorCommitCount"
+                                "$ref": "#/definitions/models.AuthorCommitCount"
                             }
                         }
                     },
@@ -288,7 +343,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_KOFI-GYIMAH_github-monitor_internal_models.Repository"
+                            "$ref": "#/definitions/models.Repository"
                         }
                     },
                     "500": {
@@ -302,7 +357,18 @@
         }
     },
     "definitions": {
-        "github_com_KOFI-GYIMAH_github-monitor_internal_models.AuthorCommitCount": {
+        "handler.AddRepositoryRequest": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "owner": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.AuthorCommitCount": {
             "type": "object",
             "properties": {
                 "author_name": {
@@ -313,7 +379,7 @@
                 }
             }
         },
-        "github_com_KOFI-GYIMAH_github-monitor_internal_models.Commit": {
+        "models.Commit": {
             "type": "object",
             "properties": {
                 "author_date": {
@@ -342,7 +408,7 @@
                 }
             }
         },
-        "github_com_KOFI-GYIMAH_github-monitor_internal_models.DateRequest": {
+        "models.DateRequest": {
             "type": "object",
             "properties": {
                 "since": {
@@ -350,7 +416,7 @@
                 }
             }
         },
-        "github_com_KOFI-GYIMAH_github-monitor_internal_models.Repository": {
+        "models.Repository": {
             "type": "object",
             "properties": {
                 "created_at": {
