# internal/github/types.go
@@ -1,0 +1,38 @@
+package github
+
+import "time"
+
+type Repository struct {
+	FullName        string    `json:"full_name"`
+	Description     string    `json:"description"`
+	HTMLURL         string    `json:"html_url"`
+	Language        string    `json:"language"`
+	ForksCount      int       `json:"forks_count"`
+	StargazersCount int       `json:"stargazers_count"`
+	OpenIssuesCount int       `json:"open_issues_count"`
+	WatchersCount   int       `json:"watchers_count"`
+	CreatedAt       time.Time `json:"created_at"`
+	UpdatedAt       time.Time `json:"updated_at"`
+}
+
+type Commit struct {
+	SHA     string `json:"sha"`
+	HTMLURL string `json:"html_url"`
+	Commit  struct {
+		Message string `json:"message"`
+		Author  struct {
+			Name  string    `json:"name"`
+			Email string    `json:"email"`
+			Date  time.Time `json:"date"`
+		} `json:"author"`
+	} `json:"commit"`
+	Author struct {
+		Login string `json:"login"`
+	} `json:"author"`
+}
+
+type CommitListOptions struct {
+	Since   time.Time
+	Page    int
+	PerPage int
+}
